--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,8 @@
 language: python
+dist: xenial
 python:
 - '3.7'
 install:
 - pip install -r requirements.txt
 script: python test.py
-deploy:
-  provider: pypi
-  user: wplct     # pypi 用户名
-  password: password  # pypi 密码
-  on:
-    python: 3.7
-    tags: true
-    branch: master
 
