--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ python:
 - '3.7'
 install:
 - pip install -r requirements.txt
-script: python test.py
+script:
+- cd tests
+- python manage.py test
 deploy:
   provider: pypi
   user: wplct
