--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 install:
 - pip install -r requirements.txt
 script:
-- cd tests&&python manage.py test
+- cd yzs_test&&python manage.py test
 deploy:
   provider: pypi
   user: wplct
